--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -6262,10 +6262,15 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
  tag-search .tag-search-list {
    margin: 0;
    position: absolute;
-   top: 1rem;
-   left: 1rem;
+   top: calc(100% - 2px);
+   left: 30px;
    z-index: 5;
-   min-width: 12rem
+   min-width: 12rem;
+   max-width: 300px;
+   max-height: 400px;
+   overflow-y: auto;
+   overflow-x: hidden;
+   box-shadow: 0 8px 10px 0 rgb(60 60 60 / 10%), 0 2px 6px 0 rgb(64 64 64 / 19%);
  }
 
  tag-selection ul {
@@ -6386,8 +6391,12 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
 
  tag-browser .modal-body .list-group-item.selected {
    background-color: #39808e;
-   border-color: #39808e;
+   border-color: #ddd;
    color: #fff
+ }
+
+ tag-browser .modal-body .list-group-item.active {
+   border-color: #ddd;
  }
 
  tag-browser .modal-body .list-group-item .glyphicon {
@@ -6408,4 +6417,8 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    justify-content: space-between;
    -ms-flex-align: center;
    align-items: center
+ }
+
+ .tag-search-list .list-group-item-info {
+   cursor: pointer;
  }
