--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -1,4 +1,4 @@
- @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap&subset=latin-ext");
+ /* @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap&subset=latin-ext"); */
 
  /*============================================================================*/
  /* ADMIN STYLES */
@@ -18,6 +18,9 @@ Remember to assign new styles to a class or id containing the admin-elements
 
 */
  body {
+   -webkit-font-smoothing: antialiased;
+   text-rendering: optimizeLegibility;
+   font-family: "Open Sans",Helvetica,Arial,sans-serif;
    display: block !important;
    /* override flex */
    -ms-flex-direction: unset !important;
