--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -6279,8 +6279,8 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
  tag-selection ul {
    display: -ms-flexbox;
    display: flex;
-   -ms-flex-flow: row nowrap;
-   flex-flow: row nowrap
+   -ms-flex-flow: row wrap;
+   flex-flow: row wrap;
  }
 
  tag-selection .label {
@@ -6293,7 +6293,8 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    flex-flow: row nowrap;
    -ms-flex-align: center;
    align-items: center;
-   margin-right: .25rem
+   margin-right: .25rem;
+   margin-bottom: 7px;
  }
 
  tag-selection .close {
