Factbox containing images

--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -51,6 +51,10 @@ blockquote.full-width::before {
   color: inherit;
 }
 
+.widenews-content .factbox img {
+  margin: 10px 0 !important;
+}
+
 .exp-box {
   font-size: 14px;
 }
