Scroll progress indicator plugin

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -349,7 +349,6 @@ form.gdpr-accept {
 
 .image-presentation {
   .slide-link {
-
     &:hover img {
       filter: none;
     }
@@ -531,5 +530,26 @@ form.gdpr-accept {
     li {
       padding: 10px 0;
     }
+  }
+}
+// Scroll indicator
+
+.scroll-indicator {
+  &.progress {
+    width: 100%;
+    height: 1px;
+    margin: 0;
+    background-color: #e9ecef;
+    opacity: 0;
+  }
+  position: fixed;
+  top: 0;
+  z-index: 11;
+  opacity: 1;
+  height: 10px;
+
+  .progress-bar {
+    background-color: #901a1e;
+    width: var(--scrollPercentage);
   }
 }
