Improved accessible colors

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -134,7 +134,7 @@
 // Find en forsker search box
 
 .find-researcher {
-  #gradient >.horizontal(#bbb, @gray-999);
+  #gradient >.horizontal(@gray-lighter, @gray);
 }
 // Find på KUnet
 
