--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -154,6 +154,8 @@ hr {
   padding: 0;
   overflow: hidden;
   clip: rect(0,0,0,0);
+  clip-path: inset(50%);
+  white-space: nowrap;
   border: 0;
 }
 // Use in conjunction with .sr-only to only display content when it's focused.
