--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -299,6 +299,10 @@
     margin-bottom: 10px;
     font-size: @font-size-h3;
     font-weight: 600;
+
+    strong {
+      font-weight: inherit;
+    }
   }
 
   &-left {
