--- a/less/tables.less
+++ b/less/tables.less
@@ -268,10 +268,11 @@ table {
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   min-height: 0.01%; // Workaround for IE9 bug (see https://github.com/twbs/bootstrap/issues/14837)
-  @media screen and (max-width: @screen-xs-max) {
+  @media (max-width: @screen-xs-max) {
     width: 100%;
     margin-bottom: (@line-height-computed * 0.75);
     overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     border: 1px solid @table-border-color;
     // Tighten up spacing
