--- a/docs/assets/css/doctypes/geonatvidenblad.css
+++ b/docs/assets/css/doctypes/geonatvidenblad.css
@@ -37,3 +37,31 @@
 .VidenBlad-Authors-ElemName {
   display: inline;
 }
+
+/* .NotLoggedon {
+  position: relative;
+  min-height: 100px;
+  padding: 15px 45px 15px 15px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 2px;
+}
+
+.NotLoggedon::before {
+  font-family: ku-symbols !important;
+  speak: none;
+  font-style: normal;
+  font-weight: 400;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  content: "\64";
+  font-size: 57px;
+  position: absolute;
+  right: 6px;
+  bottom: 6px;
+  color: #bbb;
+} */
