--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -1,1 +1,16 @@
 // KU tags
+
+.taglist {
+  .tags {
+    padding-left: 0;
+    list-style: none;
+
+    li {
+      float: left;
+
+      &+ li {
+        margin-left: 15px;
+      }
+    }
+  }
+}
