--- a/docs/assets/css/doctypes/geonatvidenblad.css
+++ b/docs/assets/css/doctypes/geonatvidenblad.css
@@ -48,7 +48,7 @@
   min-height: 300px;
 }
 
-/* Åben */
+/* Open lock */
 .Videnblad:not(.subscription-required), .Videnblad.logged-in.subscription-required {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 106.6 145.3'%3E%3Cpath d='M44.32 91.29a9.83 9.83 0 0 1 8.33-8 9.66 9.66 0 0 1 10.74 8.46 8.32 8.32 0 0 1 .07 1.12 9 9 0 0 1-4.63 8.14v12.55a5 5 0 1 1-9.91 0v-12.54a9.33 9.33 0 0 1-4.6-9.73M88 49l-55.54.3V35.17a21.27 21.27 0 0 1 42.5 0v.88H89.8a36.045 36.045 0 1 0-72.09 0v17.87L8.8 58c-.93-.05.95.87.9 1.8 0 .06-4.21 1.14-4.2 1.2l.9 62.4c-.06.93 5.67 3.85 6.6 3.9l8.1.3 42.3 4.8c.92.05 17.64-.27 17.7-1.2 0-.06 2.4-2.34 2.4-2.4L91 70c.05-.93-.88-12.55-1.8-12.6-.07 0-1.14-8.4-1.2-8.4' fill='%23efefef'/%3E%3Cpath fill='%23efefef' d='M12 49A12 12 0 0 0 0 61v72.3a12 12 0 0 0 12 12h23.56c6.62 0-12-71.19-12-77.82l-.72-3.72c0-6.63 10-14.76 3.36-14.76Z'/%3E%3Cpath fill='%23efefef' d='M72.64 49.36c-6.63 0 3.36 61.77 3.36 68.4l-52.56-.6c0 6.63-18.17 28.14-11.54 28.14h82.7a12 12 0 0 0 12-12V61a12 12 0 0 0-12-12Z'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
@@ -56,7 +56,7 @@
   background-size: 36%;
 }
 
-/* Lukket */
+/* Closed lock */
 .Videnblad.subscription-required {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 106.6 146.1'%3E%3Cpath fill='%23efefef' d='M12 49.8a12 12 0 0 0-12 12v72.29a12 12 0 0 0 12 12h23.56c6.62 0-12-71.19-12-77.82l-.72-3.72c0-6.63 10-14.76 3.36-14.76Z'/%3E%3Cpath d='M32.36 36.27c.62-12.06 10.58-21.32 22.26-20.67 10.8.59 19.43 9.51 20 20.67v13.47H32.36Zm11.81 51.59a9.84 9.84 0 0 1 8.32-8.17 9.66 9.66 0 0 1 10.66 8.66 8.92 8.92 0 0 1 .07 1.16 9.34 9.34 0 0 1-4.58 8.36v12.91a4.94 4.94 0 0 1-9.87 0v-13a9.39 9.39 0 0 1-4.55-9.88m45.05-38.31V37.16c0-20.52-16.1-37.16-36-37.16s-36 16.64-36 37.16v12.39l15.22 69c.9 0 30.64 4.24 30.7 3.3 0-.08 17.3-1.73 17.3-1.8l6.7-45.6c.15-.84 2.81-11.84 2-12-.13 0 0-12.85 0-12.85' fill='%23efefef'/%3E%3Cpath fill='%23efefef' d='M72.64 50.16c-6.63 0 3.36 61.77 3.36 68.4l-52.56-.6c0 6.63-18.17 28.14-11.54 28.14h82.7a12 12 0 0 0 12-12V61.8a12 12 0 0 0-12-12Z'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
