Slider img tweak

--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -95,7 +95,7 @@
   img {
     @media (min-width: @screen-sm) {
       height: 100%;
-      max-width: none;
+      // max-width: none;
     }
     display: block;
     flex: none;
