--- a/docs/assets/css/doctypes/geonatvidenblad.css
+++ b/docs/assets/css/doctypes/geonatvidenblad.css
@@ -48,6 +48,14 @@
   min-height: 300px;
 }
 
+.caption-text {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  color: #757575;
+  text-align: left;
+  font-size: 92%;
+}
+
 /* Open lock */
 .Videnblad.subscription-required.logged-in {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 106.6 145.3'%3E%3Cpath d='M44.32 91.29a9.83 9.83 0 0 1 8.33-8 9.66 9.66 0 0 1 10.74 8.46 8.32 8.32 0 0 1 .07 1.12 9 9 0 0 1-4.63 8.14v12.55a5 5 0 1 1-9.91 0v-12.54a9.33 9.33 0 0 1-4.6-9.73M88 49l-55.54.3V35.17a21.27 21.27 0 0 1 42.5 0v.88H89.8a36.045 36.045 0 1 0-72.09 0v17.87L8.8 58c-.93-.05.95.87.9 1.8 0 .06-4.21 1.14-4.2 1.2l.9 62.4c-.06.93 5.67 3.85 6.6 3.9l8.1.3 42.3 4.8c.92.05 17.64-.27 17.7-1.2 0-.06 2.4-2.34 2.4-2.4L91 70c.05-.93-.88-12.55-1.8-12.6-.07 0-1.14-8.4-1.2-8.4' fill='%23efefef'/%3E%3Cpath fill='%23efefef' d='M12 49A12 12 0 0 0 0 61v72.3a12 12 0 0 0 12 12h23.56c6.62 0-12-71.19-12-77.82l-.72-3.72c0-6.63 10-14.76 3.36-14.76Z'/%3E%3Cpath fill='%23efefef' d='M72.64 49.36c-6.63 0 3.36 61.77 3.36 68.4l-52.56-.6c0 6.63-18.17 28.14-11.54 28.14h82.7a12 12 0 0 0 12-12V61a12 12 0 0 0-12-12Z'/%3E%3C/svg%3E");
