--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -2,10 +2,10 @@
 
 .taglist {
   width: 100%;
-  &:extend(.clearfix all);
   .tags {
     padding-left: 0;
     list-style: none;
+    &:extend(.clearfix all);
 
     li {
       float: left;
@@ -30,4 +30,11 @@
       }
     }
   }
+}
+
+.tags-top {
+  margin-top: 5px;
+}
+.tags-bottom {
+  margin-top: 10px;
 }
