--- a/less/navbar.less
+++ b/less/navbar.less
@@ -375,7 +375,7 @@
         width: 100%;
         min-width: 350px;
         padding: 5px 10px 5px 7px;
-        @include clearfix();
+        &:extend(.clearfix all);
 
         > a {
           line-height: 1.3;
