--- a/less/navbar.less
+++ b/less/navbar.less
@@ -375,6 +375,7 @@
         width: 100%;
         min-width: 350px;
         padding: 5px 10px 5px 7px;
+        clear: both;
         &:extend(.clearfix all);
 
         > a {
