--- a/less/forms.less
+++ b/less/forms.less
@@ -682,16 +682,16 @@ body.Form {
   margin-bottom: 15px;
 }
 
-@media screen and (min--moz-device-pixel-ratio:0) {
-  select.form-control:not([multiple]) {
-    padding-right: 25px;
-    background-image: url("data:image/svg+xml,\
-            <svg version='1.1' xmlns='http://www.w3.org/2000/svg' width='10px' height='10px' viewBox='0 0 1000 1000' fill='rgb(51,51,51)'>\
-                <path d='M900 400 l -800 0 l 400 400 z'/>\
-            </svg>") !important;
-    background-repeat: no-repeat;
-    background-position: calc(100% - 7px) 50%;
-    -moz-appearance: none;
-    appearance: none;
-  }
-}
+// @media screen and (min--moz-device-pixel-ratio:0) {
+//   select.form-control:not([multiple]) {
+//     padding-right: 25px;
+//     background-image: url("data:image/svg+xml,\
+//             <svg version='1.1' xmlns='http://www.w3.org/2000/svg' width='10px' height='10px' viewBox='0 0 1000 1000' fill='rgb(51,51,51)'>\
+//                 <path d='M900 400 l -800 0 l 400 400 z'/>\
+//             </svg>") !important;
+//     background-repeat: no-repeat;
+//     background-position: calc(100% - 7px) 50%;
+//     -moz-appearance: none;
+//     appearance: none;
+//   }
+// }
