--- a/docs/assets/css/multiple-select/multiple-select.css
+++ b/docs/assets/css/multiple-select/multiple-select.css
@@ -3,7 +3,7 @@
  * Version 1.5.2
  */
 .ms-offscreen {
-  clip: rect(1px,1px,1px,1px) !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
   -webkit-clip-path: inset(50%);
   clip-path: inset(50%);
   width: 1px !important;
@@ -16,7 +16,7 @@
   outline: 0 !important;
   left: auto !important;
   top: auto !important;
-  white-space: nowrap!important;
+  white-space: nowrap !important;
 }
 
 .ms-parent {
@@ -103,20 +103,26 @@
 }
 
 .ms-choice>div.icon-caret {
-  position: absolute;
-  width: 0;
-  height: 0;
+  font-size: 10px;
   top: 50%;
-  right: 8px;
-  margin-top: -2px;
-  border-color: #252525 transparent transparent transparent;
-  border-style: solid;
-  border-width: 5px 4px 0 4px;
+  transform: translateY(-50%);
+  display: inline-block;
+  font-family: 'Glyphicons Halflings';
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  right: 4px;
+  position: absolute;
 }
 
-.ms-choice>div.icon-caret.open {
-  border-color: transparent transparent #252525 transparent;
-  border-width: 0 4px 5px 4px;
+.ms-choice>div.icon-caret:before {
+  content: '\e259';
+}
+
+.ms-choice>div.icon-caret.open:before {
+  content: "\e260";
 }
 
 .ms-drop {
