--- a/less/mixins/ku-tiles.less
+++ b/less/mixins/ku-tiles.less
@@ -13,8 +13,17 @@
     box-shadow: 0 0 0 1px @gray-ddd;
     transition: box-shadow 0.2s ease-out;
 
-    &:hover {
+    &::after {
       box-shadow: 0 8px 10px 0 rgba(60, 60, 60, .1),0 2px 6px 0 rgba(64, 64, 64, .19);
+      opacity: 0;
+      transition: all 0.2s ease-out;
+    }
+
+    &:hover {
+      //box-shadow: 0 8px 10px 0 rgba(60, 60, 60, .1),0 2px 6px 0 rgba(64, 64, 64, .19);
+      &::after {
+        opacity: 1;
+      }
 
       .tile-img {
         img {
