--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -9,7 +9,6 @@
     flex-wrap: wrap;
     flex-direction: row;
     width: 100%;
-    justify-content: space-between;
     gap: 13px;
     //&:extend(.clearfix all);
 
@@ -35,9 +34,9 @@
         }
       }
 
-      &+ li {
-        margin-left: 13px;
-      }
+      // &+ li {
+      //   margin-left: 13px;
+      // }
     }
   }
 }
