--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -9,11 +9,10 @@
     flex-wrap: wrap;
     flex-direction: row;
     width: 100%;
-    gap: 13px;
     &:extend(.clearfix all);
 
     li {
-
+      flex: 0 1 auto;
       & > a {
         text-decoration: none;
         white-space: nowrap;
