--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -11,12 +11,10 @@
     flex-wrap: wrap;
     flex-direction: row;
     width: 100%;
-    &:extend(.clearfix all);
+    gap: 13px;
 
     li {
       flex: 0 1 auto;
-      margin-right: 10px;
-      margin-bottom: 13px;
 
       &>a {
         text-decoration: none;
@@ -41,7 +39,7 @@
 
 .tags-top {
   margin-top: 26px;
-  margin-bottom: 13px;
+  margin-bottom: 23px;
 }
 
 .tags-bottom {
