--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -28,7 +28,8 @@
         transition: all .2s ease;
         transition-property: background-color, color;
 
-        &:hover {
+        &:hover,
+        &:focus {
           color: @white-color;
           background-color: @link-color;
         }
