--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -28,6 +28,10 @@
         transition: all .2s ease;
         transition-property: background-color, color;
 
+        &:visited {
+          color: @link-color;
+        }
+
         &:hover,
         &:focus {
           color: @white-color;
