--- a/less/ku-tags.less
+++ b/less/ku-tags.less
@@ -10,19 +10,20 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    width: 100%;
-    gap: 13px;
+    gap: 10px;
 
     li {
       flex: 0 1 auto;
 
       &>a {
+        font-size: 11px;
+        letter-spacing: .7px;
         text-decoration: none;
         white-space: nowrap;
         display: block;
         text-transform: uppercase;
         font-weight: 600;
-        padding: 4px 10px;
+        padding: 3px 10px;
         border-radius: @border-radius-base;
         border: 1px solid fade(@link-color, 80%);
         transition: all .2s ease;
